--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.4.0",
     "react-image-gallery": "^1.3.0",
     "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2"
   },
