--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm install",
     "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon --trace-deprecation ./src/index.js"
   },
   "author": "anontom90@gmail.com",
   "license": "ISC",
@@ -25,6 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "sslcommerz-lts": "^1.1.0",
+    "uuid": "^11.0.5"
   }
 }
