--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.2",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.1",
     "gsap": "^3.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
